# demos_obazl

./: .gitignore  LICENSE  README.adoc  README.md
dune/mwe/lib/: BUILD.bazel  dune
mibl/: .bazeliskrc  .bazelrc  WORKSPACE.bazel
mibl/.mibl/: test_user.scm
mibl/lib_clic/: BUILD.bazel
mibl/test/: dune
oibl/: .bazelrc  WORKSPACE.bazel
oibl/test/: dune
rules_ocaml/: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  COSWITCH.bzl  MODULE.bazel  README.adoc  README.md  WORKSPACE.bazel  config_opam.sh
rules_ocaml/.config/: toolchains.bazelrc
rules_ocaml/.config/opam/: opam.MODULE.bazel
rules_ocaml/.obazl.d/opam/: local.manifest
rules_ocaml/.private/: .gitignore
rules_ocaml/aggregators/: BUILD.bazel  README.md
rules_ocaml/aggregators/ocaml_archive/: BUILD.bazel
rules_ocaml/aggregators/ocaml_archives/: BUILD.bazel
rules_ocaml/aggregators/ocaml_library/: BUILD.bazel
rules_ocaml/aggregators/ppx_archives/: BUILD.bazel
rules_ocaml/aggregators/ppx_libraries/: BUILD.bazel
rules_ocaml/algebra/: BUILD.bazel
rules_ocaml/algebra/group/: BUILD.bazel  group.cquery  group.mli  group_N0.ml  group_N1.ml  test_N0.ml  test_N1.ml
rules_ocaml/binaries/case100/: BUILD.bazel  alpha.ml  alpha_adapter.c
rules_ocaml/bzl/: BUILD.bazel
rules_ocaml/bzl/host/: BUILD.bazel
rules_ocaml/bzl/profiles/: BUILD.bazel
rules_ocaml/cli/: README.md
rules_ocaml/cli/cmdliner/: BUILD.bazel  README.md  tail_ex.ml
rules_ocaml/cli/config/: BUILD.bazel  README.md  config.ml
rules_ocaml/cli/core.command/: README.md
rules_ocaml/cli/kitty/: BUILD.bazel  README.md  kitty.ml
rules_ocaml/config/cc/: CONFIG.bzl
rules_ocaml/configuration/: BUILD.bazel  README.md
rules_ocaml/configuration/template/: BUILD.bazel  BUILD.bzl  test.ml
rules_ocaml/distrib_pkgs/: BUILD.bazel  README.adoc
rules_ocaml/distrib_pkgs/compiler-libs/: BUILD.bazel  ppx_demo.ml
rules_ocaml/distrib_pkgs/dynlink/: BUILD.bazel  test.ml
rules_ocaml/distrib_pkgs/runtime_events/: BUILD.bazel  main.ml
rules_ocaml/distrib_pkgs/str/: BUILD.bazel  test.ml
rules_ocaml/distrib_pkgs/unix/: BUILD.bazel  test.ml
rules_ocaml/executables/ocaml_executable/: BUILD.bazel  hello.ml  main.ml  test.ml
rules_ocaml/ffi/: BUILD.bazel  README.adoc  README.md
rules_ocaml/ffi/ffi/: BUILD.bazel
rules_ocaml/ffi/ppx_cstubs/: BUILD.bazel
rules_ocaml/filegen/: BUILD.bazel
rules_ocaml/filegen/genrule/: BUILD.bazel  test.ml
rules_ocaml/filegen/template/: BUILD.bazel  BUILD.bzl  config.ml.template  hello.ml  test.ml
rules_ocaml/genrule/a/: BUILD.bazel  test.ml
rules_ocaml/instrumentation/: README.adoc
rules_ocaml/instrumentation/benchmarking/: README.adoc
rules_ocaml/instrumentation/coverage/: README.adoc
rules_ocaml/interop/: BUILD.bazel  README.md
rules_ocaml/interop/cstubs/: BUILD.bazel
rules_ocaml/interop/ctypes/: BUILD.bazel
rules_ocaml/interop/ffi/: BUILD.bazel  README.md
rules_ocaml/makefiles/: Makefile  README.md
rules_ocaml/makefiles/a/: Makefile
rules_ocaml/makefiles/aliasing/: README.adoc
rules_ocaml/makefiles/deps_sig/: Makefile
rules_ocaml/makefiles/fixedsig/: Makefile  README.md  a.ml  test.ml
rules_ocaml/makefiles/fixedstruct/: Makefile  README.md  axz.mli  testy.ml  testyz.ml  testz.ml
rules_ocaml/makefiles/module_bindings/: README.md
rules_ocaml/makefiles/ns/: README.md
rules_ocaml/makefiles/orphans/: README.md  test.ml
rules_ocaml/makefiles/searchmli/: Makefile
rules_ocaml/makefiles/selection/: Makefile  a.ml
rules_ocaml/module_binding/: BUILD.bazel  README.md
rules_ocaml/module_binding/orphans/: hello.ml
rules_ocaml/module_binding/proper/: BUILD.bazel
rules_ocaml/module_binding/selectboth/: BUILD.bazel
rules_ocaml/module_binding/selectsig/: BUILD.bazel
rules_ocaml/module_binding/selectstruct/: BUILD.bazel
rules_ocaml/module_binding/splits/: BUILD.bazel  README.md
rules_ocaml/modules/: BUILD.bazel  README.md
rules_ocaml/modules/dyadic/: BUILD.bazel
rules_ocaml/modules/fixedsig/: BUILD.bazel
rules_ocaml/modules/orphan/: BUILD.bazel
rules_ocaml/mwe/: BUILD.bazel  README.md
rules_ocaml/mwe/hello_archive/: BUILD.bazel  test.ml
rules_ocaml/mwe/hello_dyad/: BUILD.bazel  hello.ml
rules_ocaml/mwe/hello_executable/: BUILD.bazel
rules_ocaml/mwe/hello_library/: BUILD.bazel  common.ml  easy.ml  simple.ml
rules_ocaml/mwe/hello_lwt/: BUILD.bazel
rules_ocaml/mwe/hello_module/: BUILD.bazel  test.ml
rules_ocaml/mwe/hello_module_dyad/: BUILD.bazel
rules_ocaml/mwe/hello_ns_archive/: BUILD.bazel  main.ml
rules_ocaml/mwe/hello_ns_library/: BUILD.bazel  main.ml  test.ml
rules_ocaml/mwe/hello_sig/: BUILD.bazel
rules_ocaml/mwe/hello_signature/: BUILD.bazel
rules_ocaml/mwe/hello_singleton/: BUILD.bazel  hello.ml
rules_ocaml/mwe/intradeps/: BUILD.bazel  blue.ml  main.ml
rules_ocaml/mwe/rgb/: BUILD.bazel  b.mli  test.ml
rules_ocaml/mwe/sigdeps/: BUILD.bazel  hello.mli  test.ml
rules_ocaml/nobazel/: README.md
rules_ocaml/ns/: BUILD.bazel  README.md
rules_ocaml/ns/assisted/: README.md
rules_ocaml/ns/bottomup/: BUILD.bazel
rules_ocaml/ns/new/: BUILD.bazel  MANIFEST.md
rules_ocaml/ns/norenaming/: README.adoc
rules_ocaml/ns/obazl/: BUILD.bazel  README.md  test.ml
rules_ocaml/ns/prefixing/: BUILD.bazel
rules_ocaml/ns/srcindirect/: BUILD.bazel
rules_ocaml/ns/topdown/: BUILD.bazel  (+1 more)
rules_ocaml/parsing/: BUILD.bazel
rules_ocaml/ppx/: BUILD.bazel  README.adoc  README.md
rules_ocaml/ppxlib/: BUILD.bazel  README.adoc
rules_ocaml/preprocessing/: BUILD.bazel
rules_ocaml/private/: .gitignore
rules_ocaml/signatures/: BUILD.bazel
rules_ocaml/structs/: README.md
rules_ocaml/test/: BUILD.bazel
rules_ocaml/testing/: BUILD.bazel
rules_ocaml/threads/: README.md
rules_ocaml/tools/: bazel  dev.bazelrc  dev_test  providers.sh  release_build  release_test  source.me
tools_obazl/convert/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.adoc  WORKSPACE.bazel  WORKSPACE.bzl  mibl.scm  protocol.ml  workbins.scm  workconvert.scm  worklibs.scm  workproj.scm  workrules.scm
tools_opam/hello/: .bazelrc  MODULE.bazel
(+1564 files in other folders)
