load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "mibl",
    remote = "https://github.com/obazl/mibl",
    branch = "main"
        # commit = "bb528f3edac6c00953010e28d51e4a52da7555aa",
        # shallow_since = "1618495335 -0500"
)
load("@mibl//:WORKSPACE.bzl", "cc_fetch_repos")
cc_fetch_repos()
