load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "oibl",
    remote = "https://github.com/obazl/oibl",
    branch = "main"
        # commit = "bb528f3edac6c00953010e28d51e4a52da7555aa",
        # shallow_since = "1618495335 -0500"
)
load("@oibl//:WORKSPACE.bzl", "cc_fetch_repos")
cc_fetch_repos()
