test_suite(
    name = "test",
    tests = [
        "//aggregators:test",
        "//algebra/group:test",
        "//configuration:test",
        "//filegen:test",
        "//interop:test",
        "//modules:test",
        "//mwe:test",
        "//ns:test",
        "//ppxlib:test",
        "//signatures:test",
        # "//testing:test",
    ]
)

alias(
    name = "gensig",
    actual = "@tools_obazl//sig:extract"
)

alias(
    name = "isig",
    actual = "@rules_ocaml//inspect:sig"
)

alias(
    name = "istruct",
    actual = "@rules_ocaml//inspect:struct"
)
