# load("@cc_config//:MACROS.bzl", "repo_paths")

# PROD_REPOS = [
#     "@ocaml//version"
# ]

# repo_paths(
#     name = "repo_paths",
#     repos = PROD_REPOS
# )

# repo_paths(
#     name = "test_repo_paths",
#     repos = PROD_REPOS + [
#     ]
# )

################################################################
test_suite(
    name = "test",
    tests = [
        "//aggregators:test",
        "//algebra/group:test",
        "//configuration:test",
        "//deps:test",
        "//distrib_pkgs:test",
        "//filegen:test",
        "//interop:test",
        "//modules:test",
        "//mwe:test",
        "//ns:test",
        "//parsing:test",
        "//ppxlib:test",
        "//signatures:test",
        "//testing:test",
    ]
)

alias(
    name = "gensig",
    actual = "@tools_obazl//sig:extract"
)

alias(
    name = "isig",
    actual = "@rules_ocaml//inspect:sig"
)

alias(
    name = "istruct",
    actual = "@rules_ocaml//inspect:struct"
)
