module(
    name = "demos_obazl",
    version = "5.0.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 5,
)

## bcr:
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.17")

## obazl:
bazel_dep(name = "rules_ocaml") # , version = "5.0.0")
git_override(module_name = "rules_ocaml",
             branch  = "5.0.0.alpha",
             remote = "https://github.com/obazl/rules_ocaml.git")

bazel_dep(name = "rules_ppx", version = "5.0.0")
git_override(module_name = "rules_ppx",
             branch  = "5.0.0.alpha",
             remote = "https://github.com/obazl/rules_ppx.git")

bazel_dep(name = "tools_opam", version = "1.0.0")
git_override(module_name = "tools_opam",
             branch  = "1.0.0.alpha",
             remote = "https://github.com/obazl/tools_opam.git")

include("//.config/opam:opam.MODULE.bazel")

