module(
    name                = "demos_obazl",
    version             = "3.0.0",
    compatibility_level = 3,
    bazel_compatibility = [">=7.1.0"],
)

## bcr:
bazel_dep(name = "platforms",    version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc",     version = "0.0.17")

## obazl:
bazel_dep(name = "rules_ocaml", version = "3.0.0")
# git_override(module_name = "rules_ocaml",
#              branch  = "3.0.0.beta",
#              remote = "https://github.com/obazl/rules_ocaml.git")

bazel_dep(name = "rules_ppx", version = "3.0.0")
local_path_override(module_name="rules_ppx",
                    path = "/Users/gar/obazl/rules_ppx")
# git_override(module_name = "rules_ppx",
#              branch  = "5.0.0.alpha",
#              remote = "https://github.com/obazl/rules_ppx.git")

bazel_dep(name = "tools_opam", version = "1.0.0")
# git_override(module_name = "tools_opam",
#              branch  = "1.0.0.alpha",
#              remote = "https://github.com/obazl/tools_opam.git")

bazel_dep(name = "tools_obazl", version = "3.0.0",
          repo_name = "obazl")
# git_override(module_name = "tools_obazl",
#              branch  = "3.0.0.alpha",
#              remote = "https://github.com/obazl/tools_obazl.git")

include("//.config/opam:opam.MODULE.bazel")

