module(
    name                = "demos_obazl",
    version             = "3.0.0.dev",
    compatibility_level = 3,
    bazel_compatibility = [">=7.1.0"],
)

## bcr:
bazel_dep(name = "platforms",    version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc",     version = "0.1.1")

## obazl:
bazel_dep(name = "obazl_tools_cc", version = "3.0.0.dev",
          repo_name = "obazl_cc")
bazel_dep(name = "rules_ocaml",    version = "3.0.0.dev")
bazel_dep(name = "tools_opam",     version = "1.0.0.dev")
bazel_dep(name = "rules_ppx",      version = "3.0.0.dev")
bazel_dep(name = "tools_obazl",    version = "3.0.0.dev",
          repo_name = "obazl")

include("//.config/opam:opam.MODULE.bazel")

