workspace( name = "demos" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
    ],
    sha256 = "c6966ec828da198c5d9adbaa94c05e3a1c7f21bd012a0b29ba8ddbccb2c93b0d",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

################################################################
http_archive(
    name = "rules_ocaml",
    url = "https://github.com/obazl/rules_ocaml/archive/f7c0ee1f63f049343cf16164064fb7ec551ca783.zip",
    strip_prefix = "rules_ocaml-f7c0ee1f63f049343cf16164064fb7ec551ca783",
    sha256 = "db173b1bbba7bfe0a0f53ed815a2bf0e8f0aeb6e2f727e7489c17f130abe6dec"
)

http_archive(
    name = "tools_obazl",
    url  = "https://github.com/obazl/tools_obazl/archive/848c7931a2e89564ad98a84bd5e33a808284287b.zip",
    strip_prefix = "tools_obazl-848c7931a2e89564ad98a84bd5e33a808284287b",
    sha256 = "ef00f971c787798bcebc2645477a0d0ebd5d7001f4de703562a6464d6b3e2399"
)

http_archive(
    name = "opam",  ## do not change name
    url  = "https://github.com/obazl/tools_opam/archive/57762f24eec916ffca4e0f3053227d54f98788db.zip",
    strip_prefix = "tools_opam-57762f24eec916ffca4e0f3053227d54f98788db",
    sha256 = "28b4f6ff32c815162e1a0da49ddbcc4e8c4132d3427e110f71a7f3bd1737e6a5"
)

load("@opam//:WORKSPACE.bzl", "opam_fetch_repos")
opam_fetch_repos()

load("@rules_foreign_cc//foreign_cc:repositories.bzl",
     "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()

## uncomment after configuring coswitch; see README.md
load("//:COSWITCH.bzl", register_coswitch = "register")
register_coswitch()

load("@coswitch//:BOOTSTRAP.bzl", "bootstrap")
bootstrap()
