workspace( name = "demos" )

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# ## to use the llvm toolchain (https://github.com/grailbio/bazel-toolchain):
# BAZEL_TOOLCHAIN_TAG = "0.7.2"
# BAZEL_TOOLCHAIN_SHA = "f7aa8e59c9d3cafde6edb372d9bd25fb4ee7293ab20b916d867cd0baaa642529"

# http_archive(
#     name = "com_grail_bazel_toolchain",
#     sha256 = BAZEL_TOOLCHAIN_SHA,
#     strip_prefix = "bazel-toolchain-{tag}".format(tag = BAZEL_TOOLCHAIN_TAG),
#     canonical_id = BAZEL_TOOLCHAIN_TAG,
#     url = "https://github.com/grailbio/bazel-toolchain/archive/{tag}.tar.gz".format(tag = BAZEL_TOOLCHAIN_TAG),
# )
# load("@com_grail_bazel_toolchain//toolchain:deps.bzl",
#      "bazel_toolchain_dependencies")
# bazel_toolchain_dependencies()
# load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")
# llvm_toolchain(name = "llvm_toolchain", llvm_version = "14.0.0")
# load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")
# llvm_register_toolchains()

# ## end llvm ##

################################################################
# https://sr.ht/~motiejus/bazel-zig-cc/

BAZEL_ZIG_CC_VERSION = "v0.8.0"

http_archive(
    name = "bazel-zig-cc",
    sha256 = "defdb86f90dbaa1101b3b6cd74ed9a1e38353db4d33560878f3307c1f32838d8",
    strip_prefix = "bazel-zig-cc-{}".format(BAZEL_ZIG_CC_VERSION),
    urls = ["https://git.sr.ht/~motiejus/bazel-zig-cc/archive/{}.tar.gz".format(BAZEL_ZIG_CC_VERSION)],
)

load("@bazel-zig-cc//toolchain:defs.bzl", zig_toolchains = "toolchains")

# version, url_formats and host_platform_sha256 are optional, but highly
# recommended. Zig SDK is by default downloaded from dl.jakstys.lt, which is a
# tiny server in the closet of Yours Truly.
zig_toolchains(
    # version = "<...>",
    # url_formats = [
    #     "https://example.org/zig/zig-{host_platform}-{version}.{_ext}",
    # ],
    # host_platform_sha256 = { ... },
)

register_toolchains(
    # if no `--platform` is specified, these toolchains will be used for
    # (linux,darwin,windows)x(amd64,arm64)
    "@zig_sdk//toolchain:linux_amd64_gnu.2.19",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    # "@zig_sdk//toolchain:windows_amd64",
    # "@zig_sdk//toolchain:windows_arm64",

    # # amd64 toolchains for libc-aware platforms:
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.19",
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.28",
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.31",
    # "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
    # # arm64 toolchains for libc-aware platforms:
    # "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.28",
    # "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
)

#### end zig ####

http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
    ],
    sha256 = "c6966ec828da198c5d9adbaa94c05e3a1c7f21bd012a0b29ba8ddbccb2c93b0d",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

################################################################
http_archive(
    name = "rules_ocaml",
    url  = "https://github.com/obazl/rules_ocaml/archive/refs/heads/main.zip",
    strip_prefix = "rules_ocaml-main"

    # url = "https://github.com/obazl/rules_ocaml/archive/f7c0ee1f63f049343cf16164064fb7ec551ca783.zip",
    # strip_prefix = "rules_ocaml-f7c0ee1f63f049343cf16164064fb7ec551ca783",
    # sha256 = "db173b1bbba7bfe0a0f53ed815a2bf0e8f0aeb6e2f727e7489c17f130abe6dec"
)

http_archive(
    name = "obazl",
    url  = "https://github.com/obazl/tools_obazl/archive/refs/heads/main.zip",
    strip_prefix = "tools_obazl-main"

    # url  = "https://github.com/obazl/tools_obazl/archive/848c7931a2e89564ad98a84bd5e33a808284287b.zip",
    # strip_prefix = "tools_obazl-848c7931a2e89564ad98a84bd5e33a808284287b",
    # sha256 = "ef00f971c787798bcebc2645477a0d0ebd5d7001f4de703562a6464d6b3e2399"
)

http_archive(
    name = "opam",  ## do not change name
    url  = "https://github.com/obazl/tools_opam/archive/refs/heads/main.zip",
    strip_prefix = "tools_opam-main",

    # url  = "https://github.com/obazl/tools_opam/archive/57762f24eec916ffca4e0f3053227d54f98788db.zip",
    # strip_prefix = "tools_opam-57762f24eec916ffca4e0f3053227d54f98788db",
    # sha256 = "28b4f6ff32c815162e1a0da49ddbcc4e8c4132d3427e110f71a7f3bd1737e6a5"
)

load("@opam//:WORKSPACE.bzl", "opam_fetch_repos")
opam_fetch_repos()

load("@rules_foreign_cc//foreign_cc:repositories.bzl",
     "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()

## uncomment after configuring coswitch; see README.md
load("//:COSWITCH.bzl", register_coswitch = "register")
register_coswitch()

load("@coswitch//:BOOTSTRAP.bzl", "bootstrap")
bootstrap()
