package(default_visibility = ["//visibility:public"])


load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "lang",
    values = ["en", "fr"],
    build_setting_default = "en",
)

config_setting(name = "lang_en", flag_values = {":lang": "en"})
config_setting(name = "lang_fr", flag_values = {":lang": "fr"})

################
config_setting(
    name = "linux_en",
    constraint_values = ["@platforms//os:linux"],
    flag_values = {":lang": "en"}
)
config_setting(
    name = "linux_fr",
    constraint_values = ["@platforms//os:linux"],
    flag_values = {":lang": "fr"}
)
config_setting(
    name = "macos_en",
    constraint_values = ["@platforms//os:macos"],
    flag_values = {":lang": "en"}
)
config_setting(
    name = "macos_fr",
    constraint_values = ["@platforms//os:macos"],
    flag_values = {":lang": "fr"}
)

