package(default_visibility = ["//visibility:public"])


load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "foo",
    values = ["foo", "bar", "baz"],
    build_setting_default = "foo",
)

## configuration settings. a config setting will be "true" if all of
## its *_values attributes are true. For example, building on MacOS
## will cause Bazel to automatically set `@platforms//os:macos` to
## true; passing `--//bzl:lang=fr` will set the value of `//bzl:lang`
## to `fr`. Together these will set config setting `//bzl:macos_fr` to true.

################
string_flag(
    name = "lang",
    values = ["en", "de", "fr"],
    build_setting_default = "en",
)

config_setting(name = "lang_en", flag_values = {":lang": "en"})
config_setting(name = "lang_fr", flag_values = {":lang": "fr"})

config_setting(name = "lang_de?", flag_values = {":lang": "de"})
config_setting(name = "lang_en?", flag_values = {":lang": "en"})
config_setting(name = "lang_fr?", flag_values = {":lang": "fr"})

config_setting(
    name = "linux_en",
    constraint_values = ["@platforms//os:linux"],
    flag_values = {":lang": "en"}
)
config_setting(
    name = "linux_fr",
    constraint_values = ["@platforms//os:linux"],
    flag_values = {":lang": "fr"}
)
config_setting(
    name = "macos_en",
    constraint_values = ["@platforms//os:macos"],
    flag_values = {":lang": "en"}
)
config_setting(
    name = "macos_fr",
    constraint_values = ["@platforms//os:macos"],
    flag_values = {":lang": "fr"}
)
