test_suite(
    name = "mwe",
    tests = [
        # "//mwe/hello_archive:test",
        "//mwe/hello_dyad:test",
        # "//mwe/hello_lwt:test",
        "//mwe/hello_library:test",
        "//mwe/hello_ns_archive:test",
        "//mwe/hello_ns_library:test",
        "//mwe/hello_singleton:test",
        "//mwe/intradeps:test",
        "//mwe/rgb:test",
        ## "//mwe/signature:test",  ## known fail
    ]
)

