test_suite(
    name = "test",
    tests = [
        # "//ppx/derivers:test",
        "//ppxlib/genrule:test",
        "//ppxlib/hello:test",
        "//ppxlib/metaquot:test",
        "//ppxlib/ppx_codeps:test",
        "//ppxlib/ppx_optcomp:test",
        "//ppxlib/rewriters/greeting:test",
    ]
)
