test_suite(
    name = "ppxlib",
    tests = [
        "//ppxlib/codeps:test",
        # "//ppx/derivers:test",

        "//ppxlib/genrule:test",
        "//ppxlib/hello:test",
        # "//ppxlib/metaquot:test",
        "//ppxlib/ppx_optcomp",
        # "//ppxlib/ppx_show:test",
        "//ppxlib/rewriters",
    ]
)
