load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//:WORKSPACE.bzl", "fetch_repos")
fetch_repos()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", # for re2c
     "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()

load("@libs7//:WORKSPACE.bzl", libs7_fetch_repos = "fetch_repos")
libs7_fetch_repos()

load("//:WORKSPACE.opam.bzl", opam_bootstrap = "bootstrap")
opam_bootstrap()

load("//:WORKSPACE.tests.bzl", tests_bootstrap = "bootstrap")
tests_bootstrap()

